profile dropdown overflow fixes overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -36,10 +36,14 @@ a {
 }
 
 .text-muted{
-  display: flex;
-  flex-direction: column;
+  display: inline-block;
+  width: 180px;
+  white-space: nowrap;
+  overflow: hidden !important;
+  text-overflow: ellipsis;
   .me-1{
       margin: 0.125rem;
+
   }
 
 }
